--- a/css/styles.css
+++ b/css/styles.css
@@ -31,13 +31,14 @@ body {
 .sidebar {
     height: 1080px;
     width: calc(1920px - 1226px);
-    background-color: #000066;
+    /* background-color: #000066; */
+    background: radial-gradient(farthest-corner at 500px 700px, #0000bb, #000066);
     display: flex;
     flex-direction: column;
 }
 
 .name-plate {
-    background-color: #336600;
+    background: radial-gradient(#663300, #774411);
     width: 80%;
     margin-left: 10%;
     color: #eee;
@@ -46,4 +47,13 @@ body {
     font-size: 48px;
     margin-top: 50px;
     text-shadow: 5px 5px 10px #663300;
+    margin-bottom: 50px;
+}
+
+.tracker {
+    border: 20px ridge #336600;
+    height: 500px;
+    width: 80%;
+    margin-left: calc(10% - 20px);
+    background: radial-gradient(#000000, #000033)
 }
